Add new endpoint for web app filter config
